--- a/applications/common/frontend/src/atomic-design-system/05-page/p.page/p.page.scss
+++ b/applications/common/frontend/src/atomic-design-system/05-page/p.page/p.page.scss
@@ -28,10 +28,10 @@ html {
   overflow: initial;
 }
 
-body {
-  background-color: var(--base-color-body-background);
-  color: var(--base-color-body-text, #686868);
-}
+// body {
+//   background-color: var(--base-color-body-background);
+//   color: var(--base-color-body-text, #686868);
+// }
 
 body.lines {
   @include o-body-background.o-body-background--lines;
