KYAN-213 Add logic of hiding unnecessary Carousel controls

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/carousel/carousel.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/carousel/carousel.html
@@ -27,7 +27,7 @@
         data-items-per-row-md="${model.tabletElementsInRow}"
         data-items-per-row-lg="${model.desktopElementsInRow}"
       >
-        <div data-glide-el="controls" class="buttons is-right">
+        <div data-glide-el="controls" class="buttons is-right ${model.isControlHidden}">
           <button data-glide-dir="<" class="button" aria-label="Shift to the previous item">
             <span class="icon">
               <i class="mdi mdi-arrow-left"></i>
