--- a/applications/common/frontend/src/global-variables.scss
+++ b/applications/common/frontend/src/global-variables.scss
@@ -28,17 +28,17 @@
  }
 
 :root {
-    // Borders from: src/atomic-design-system/00-token/t.border
-    // @include add-css-variables(borders.$map_t-border-weight, border-weight);
-    // @include add-css-variables(borders.$map_t-border-radius, border-radius);
+    // Borders from: src/atomic-design-system/00-token/t.border - no bulma css variables
+    @include add-css-variables(borders.$map_t-border-weight, border-weight);
+    @include add-css-variables(borders.$map_t-border-radius, border-radius);
 
-    // Breakpoints from: src/atomic-design-system/00-token/t.breakpoint
+    // Breakpoints from: src/atomic-design-system/00-token/t.breakpoint - no bulma css variables
     @include add-css-variables(breakpoints.$map_t-breakpoints-px, breakpoint);
 
     // Colors from: src/atomic-design-system/00-token/t.color
-    // @include add-css-variables(colors.$map_t-base-color, base-color);
-    // @include add-css-variables(colors.$map_t-color-by-id, color);
-    // @include add-css-variables(colors.$map_t-color-shadows, color);
+    @include add-css-variables(colors.$map_t-base-color, base-color);
+    @include add-css-variables(colors.$map_t-color-by-id, color);
+    @include add-css-variables(colors.$map_t-color-shadows, color);
 
      // Fonts from: src/atomic-design-system/00-token/t.color
      @include add-css-variables(fonts.$map_t-fonts, font);
