KYAN-217 fix hamburger menu

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/navbar/navbarbrand/navbarbrand.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/navbar/navbarbrand/navbarbrand.html
@@ -29,6 +29,7 @@
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
         </a>
       </sly>
     </div>
