--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.hero-background/o.hero-background.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.hero-background/o.hero-background.scss
@@ -23,7 +23,7 @@
 
 @use 'src/atomic-design-system/00-token/t.breakpoint' as breakpoint;
 @use 'src/atomic-design-system/00-token/t.position' as position;
-@use 'src/bulma-overwrite/variables' as variables;
+@use 'src/variables-helpers' as variables;
 
 $size: 235px;
 $size-075: $size * 0.75; // 3/4 of the size
