--- a/applications/common/frontend/src/atomic-design-system/00-token/t.spacing/t.spacing.gap.scss
+++ b/applications/common/frontend/src/atomic-design-system/00-token/t.spacing/t.spacing.gap.scss
@@ -17,7 +17,7 @@
  */
 
 @use 'sass:map';
-@use 'src/bulma-overwrite/variables' as gap;
+@use 'src/variables-helpers' as gap;
 
 // i.e. `.t-gap-4_1`
 @each $gap, $size in gap.$spacing-values {
