--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.eyebrow.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.eyebrow.scss
@@ -18,8 +18,7 @@
 
 @use 'sass:map';
 
-@use 'src/bulma-overwrite/bulma-spacing';
-@use 'src/bulma-overwrite/variables' as spacing;
+@use 'src/variables-helpers';
 
 @use 'src/atomic-design-system/00-token/t.font' as font;
 @use 'src/atomic-design-system/00-token/t.color' as color;
