--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.level-item/m.level-item.feature-lg.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.level-item/m.level-item.feature-lg.scss
@@ -16,7 +16,7 @@
  * -->
  */
 
-@use 'src/bulma-overwrite/bulma-spacing';
+@use 'src/variables-helpers';
 
 @mixin m-level-item-feature-lg {
   > .container {
