--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.hero/o.hero.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.hero/o.hero.scss
@@ -20,8 +20,7 @@
 
 @use 'src/atomic-design-system/00-token/t.spacing';
 @use 'src/atomic-design-system/00-token/t.breakpoint' as breakpoint;
-@use 'src/bulma-overwrite/variables' as variables;
-@use 'src/bulma-overwrite/bulma-spacing' as bulma-spacing;
+@use 'src/variables-helpers' as variables;
 @use 'src/atomic-design-system/03-organism/o.hero-background' as o-hero-background;
 
 @mixin o-hero {
