--- a/applications/common/frontend/src/main.scss
+++ b/applications/common/frontend/src/main.scss
@@ -18,7 +18,9 @@
 @use '../node_modules/@glidejs/glide/src/assets/sass/glide.core.scss';
 @use '../node_modules/viewerjs/dist/viewer.min.css';
 @use 'src/bulma-overwrite-v1';
-@use 'src/global-variables';
+@use 'src/global';
+@use 'src/variables-css';
+@use 'src/variables-helpers';
 @use 'src/components';
 @use 'src/atomic-design-system/04-template' as template;
 @use 'src/atomic-design-system/05-page' as page;
