--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.card/m.card.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.card/m.card.scss
@@ -18,19 +18,19 @@
 
 @mixin m-card {
 
-  background-color: var(--base-color-secondary-background, var(--base-color-white));
+  background-color: var(--kyanite-custom-card-background);
 
   a:hover {
     color: var(--color-grey--900);
   }
 
   .card-footer {
-    border-top-color: var(--base-color-contrast-background, #ededed);
+    border-top-color: var(--kyanite-custom-card-footer-border);
 
     .card-footer-item {
 
       &:not(:last-child) {
-        border-right-color: var(--base-color-contrast-background, #ededed);
+        border-right-color: var(--kyanite-custom-card-footer-border);
       }
     }
   }
