--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.message/m.message.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.message/m.message.scss
@@ -38,7 +38,7 @@
     color: var(--color-grey--900) !important;
 
     border: none;
-    background-color: var(--base-color-white);
+    background-color: #FFF;
   }
 
   &.is-primary {
