--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.panel/m.panel.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.panel/m.panel.scss
@@ -20,7 +20,7 @@
 
   .panel-tabs {
     a.is-active {
-      color: var(--base-color-body-text, var(--color-grey--900));
+      color: var(--color-grey--900);
     }
   }
 
