--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.button.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.button.scss
@@ -86,14 +86,11 @@
   }
 
   &-secondary {
-    background-color: var(--base-color-body-background);
-    border: var(--border-weight-1) solid;
-    border-color: var(--color-secondary--500, var(--color-grey--300));
-    color: var(--base-color-body-text, var(--color-grey--900));
+    background-color: var(--color-secondary--600);
 
     &:hover {
-      background-color: var(--color-secondary--600, var(--color-primary--600));
-      border-color:     var(--color-secondary--600, var(--color-primary--600));
+      background-color: var(--color-secondary--500);
+
     }
 
     &:focus:not(:active) {
@@ -101,44 +98,53 @@
     }
 
     &:focus-visible {
-      color: var(--color-secondary--600, var(--color-primary--600));
-      border-color: var(--color-secondary--600, var(--color-primary--600));
-      outline: var(--border-weight-3) solid;
-      outline-color: var(--color-secondary--300, var(--color-primary--300));
+      background-color: var(--color-secondary--500);
 
+      outline: var(--border-weight-3) solid;
+      outline-color: var(--color-secondary--300);
 
       outline-offset: 0;
     }
 
     &:active {
-      color: var(--color-secondary--700, var(--color-primary--700));
-      border-color: var(--color-secondary--700, var(--color-primary--700));
+      background-color: var(--color-secondary--700);
+      outline: none;
     }
 
     &.is-light {
-      background-color: var(--base-color-body-background);
-      color: var(--base-color-body-text, var(--color-grey--900));
+      background-color: var(--color-secondary--100);
+      color: var(--color-secondary--600);
 
       &:hover {
-        border-color: var(--color-secondary--300, var(--color-primary--300));
-      }
-
-      &:focus-visible {
-        color: var(--color-secondary--300, var(--color-primary--300));
-        border-color: var(--color-secondary--300, var(--color-primary--300));
-        outline-color: var(--color-secondary--100, var(--color-primary--100));
+        background-color: var(--color-secondary--200);
+        color: var(--color-secondary--700);
       }
 
       &:active {
-        color: var(--color-secondary--400, var(--color-primary--400));
-        border-color: var(--color-secondary--400, var(--color-primary--400));
+        background-color: var(--color-secondary--300);
+        color: var(--color-secondary--700);
+      }
+    }
+
+    &.is-inverted {
+      color: var(--color-secondary--600);
+    }
+
+    &.is-outlined {
+      background-color: transparent;
+      color:            var(--color-secondary--600);
+      border-color:     var(--color-secondary--600);
+
+      &:hover {
+        background-color: var(--color-secondary--600);
+        border-color:     var(--color-secondary--600);
       }
     }
   }
 
   &-ghost {
     border: none;
-    color: var(--base-color-body-text, var(--color-grey--900));
+    color: var(--color-grey--900);
 
     &:hover {
       color: var(--color-primary--600);
