--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
@@ -31,7 +31,7 @@
   }
 
   h1,h2,h3,h4,h5,h6 {
-    color: var(--base-color-body-text, var(--color-grey--800));
+    color: var(--kyanite-body-color);
   }
 
   strong {
