--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.tag.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.tag.scss
@@ -22,8 +22,8 @@
 @use 'src/variables-helpers';
 
 @mixin a-tag-default-color {
-  background-color: var(--base-color-contrast-background, var(--color-grey--900));
-  color: var(--base-color-contrast-text, var(--base-color-white));
+  background-color: var(--kyanite-custom-tag-background);
+  color: var(--kyanite-custom-tag-text);
 }
 
 /* default tag style */
