--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.title.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.title.scss
@@ -24,12 +24,12 @@
 
 .a-title {
   font-weight: var(--font-weight-700);
-  color: var(--base-color-body-text, var(--color-grey--900));
+  color: var(--kyanite-custom-title);
 }
 
 .a-subtitle {
   font-weight: var(--font-weight-600);
-  color: var(--base-color-body-text, var(--color-grey--700));
+  color: var(--kyanite-custom-subtitle);
 }
 
 .a-title,
