--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.footer/o.footer.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.footer/o.footer.scss
@@ -23,7 +23,7 @@
 @use 'src/atomic-design-system/01-atom/a.animated-underline-link' as link;
 
 @mixin o-footer {
-  background-color: var(--base-color-body-background, var(--color-grey--1000)) !important;
+  background-color: var(--kyanite-custom-footer-background);
 
   @extend .py-6_4;
 
@@ -57,7 +57,7 @@
 
   .content,
   .content.has-text-grey-darker {
-    color: var(--base-color-body-text, var(--color-grey--100)) !important;
+    color: var(--kyanite-custom-footer-text) !important;
 
     &.is-small {
       @extend .mt-5_1;
@@ -74,7 +74,7 @@
   }
 
   .icon {
-    color: var(--base-color-body-text, var(--color-grey--100)) !important;
+    color: var(--kyanite-custom-footer-text) !important;
 
     &:not(:last-of-type) {
       margin-right: var(--spacing-5);
@@ -101,7 +101,7 @@
     .menu-label {
       margin: 0;
       text-transform: unset;
-      color: var(--base-color-menu-label, var(--color-grey--400)) !important;
+      color: var(--kyanite-custom-footer-menu-label) !important;
       font-size: var(--font-size-16);
     }
 
@@ -114,7 +114,7 @@
       display: inline-block;
       @include link.a-animated-underline-link;
       @extend .p-0;
-      color: var(--base-color-body-text, var(--color-grey--100)) !important;
+      color: var(--kyanite-custom-footer-text) !important;
       background-color: inherit;
       width: auto;
 
