KYAN-180 remove line breaks from AuthorBio

--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleauthorbio/template-default.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleauthorbio/template-default.html
@@ -32,21 +32,15 @@
       <div class="media-content">
         <div class="content">
           <p data-sly-test.authorName="${author.authorName}"
-             class="name">
-            ${authorName}
-          </p>
+             class="name">${authorName}</p>
           <p data-sly-test.authorRole="${author.authorRole}"
-             class="role">
-            ${authorRole}
-          </p>
+             class="role">${authorRole}</p>
         </div>
       </div>
     </article>
 
     <div class="description content">
-      <p data-sly-test.authorDescription="${author.authorDescription}">
-        ${authorDescription}
-      </p>
+      <p data-sly-test.authorDescription="${author.authorDescription}">${authorDescription}</p>
     </div>
 
     <!--/*
